--- a/webapp/view/EmployeeDetails.view.xml
+++ b/webapp/view/EmployeeDetails.view.xml
@@ -1,8 +1,10 @@
 <mvc:View 
-	controllerName="logaligroup.employees.controller.EmployeeMaster"
+	controllerName="logaligroup.employees.controller.EmployeeDetails"
 	xmlns:mvc="sap.ui.core.mvc"
 	xmlns="sap.m"
-	xmlns:core="sap.ui.core" displayBlock="true" height="100%"
+	xmlns:core="sap.ui.core" 
+	displayBlock="true"
+	height="100%"
 >
 	<Page id="idDetailPage" title="{i18n>employeesDetailTitle}">
 		<Text id="idNameText" text="{employeesModel>LastName}, {employeesModel>FirstName}"/>
