Eliminando incidências e corrigindo fragmentos duplicados na inserção

--- a/webapp/view/EmployeeDetails.view.xml
+++ b/webapp/view/EmployeeDetails.view.xml
@@ -69,9 +69,7 @@
 				</Toolbar>
 			</headerToolbar>
 
-			<Panel id="idTableIncidencePanel" class="sapUiNoContentPadding" backgroundDesign="Transparent">
-			
-			</Panel>
+			<Panel id="idTableIncidencePanel" class="sapUiNoContentPadding" backgroundDesign="Transparent"/>
 			
 		</Panel>
 	</Page>
