--- a/webapp/view/OrderDetails.view.xml
+++ b/webapp/view/OrderDetails.view.xml
@@ -4,5 +4,8 @@
     xmlns:core="sap.ui.core" 
     displayBlock="true"
 >
+<Page id="idOrdersPanel">
+    <Text id="idOrderDetailsText" text="Order Details"/>
+</Page>
 
 </mvc:View>
