OData Imagem - Signature CREATE

--- a/webapp/view/OrderDetails.view.xml
+++ b/webapp/view/OrderDetails.view.xml
@@ -80,6 +80,13 @@
             }"
         />
     </Panel>
+
+    <footer>
+        <Toolbar id="idSignatureToolbar">
+            <ToolbarSpacer id="idSignatureToolbarSpacer"/>
+            <Button id="idSaveSignatureButton" text="{i18n>saveSignature}" press="onSaveSignatureButtonPress"/>
+        </Toolbar>
+    </footer>
 </Page>
 
 </mvc:View>
